{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 5,
  "lineage": "4a2383a5-0fa8-9969-c88b-43ab918b572a",
  "resources": [
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736165:network-acl/acl-0731f19b8607cec3a",
            "default_network_acl_id": "acl-0731f19b8607cec3a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0731f19b8607cec3a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "651706736165",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-04ba028d5dfebadd6",
              "subnet-04c5e9bae70909d71",
              "subnet-0d90754905abbc5ce",
              "subnet-0e1ac2ad8e141220e"
            ],
            "tags": {
              "Name": "project-bedrock-vpc-default",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "project-bedrock-vpc-default",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06de14ded8d463299"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736165:route-table/rtb-04135ce5434541eb9",
            "default_route_table_id": "rtb-04135ce5434541eb9",
            "id": "rtb-04135ce5434541eb9",
            "owner_id": "651706736165",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "project-bedrock-vpc-default",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "project-bedrock-vpc-default",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06de14ded8d463299"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736165:security-group/sg-011e7c91a1dca3c73",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-011e7c91a1dca3c73",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "651706736165",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-bedrock-vpc-default",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "project-bedrock-vpc-default",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06de14ded8d463299"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736165:internet-gateway/igw-026134f06ae5dbeee",
            "id": "igw-026134f06ae5dbeee",
            "owner_id": "651706736165",
            "region": "us-east-1",
            "tags": {
              "Name": "project-bedrock-vpc",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "project-bedrock-vpc",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06de14ded8d463299"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-026134f06ae5dbeee",
            "id": "r-rtb-0e61d2a632639b3e01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0e61d2a632639b3e0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706736165",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0e61d2a632639b3e0"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736165:route-table/rtb-07d6161312ad9f2c8",
            "id": "rtb-07d6161312ad9f2c8",
            "owner_id": "651706736165",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "project-bedrock-vpc-private-us-east-1a",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "project-bedrock-vpc-private-us-east-1a",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06de14ded8d463299"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706736165",
            "id": "rtb-07d6161312ad9f2c8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736165:route-table/rtb-056dc4fe426809da7",
            "id": "rtb-056dc4fe426809da7",
            "owner_id": "651706736165",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "project-bedrock-vpc-private-us-east-1b",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "project-bedrock-vpc-private-us-east-1b",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06de14ded8d463299"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706736165",
            "id": "rtb-056dc4fe426809da7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736165:route-table/rtb-0e61d2a632639b3e0",
            "id": "rtb-0e61d2a632639b3e0",
            "owner_id": "651706736165",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026134f06ae5dbeee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-bedrock-vpc-public",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "project-bedrock-vpc-public",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06de14ded8d463299"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706736165",
            "id": "rtb-0e61d2a632639b3e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c61336c5d1675f2e",
            "region": "us-east-1",
            "route_table_id": "rtb-07d6161312ad9f2c8",
            "subnet_id": "subnet-0d90754905abbc5ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0046c20afbb8a35",
            "region": "us-east-1",
            "route_table_id": "rtb-056dc4fe426809da7",
            "subnet_id": "subnet-04ba028d5dfebadd6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8a4d3407923a374",
            "region": "us-east-1",
            "route_table_id": "rtb-0e61d2a632639b3e0",
            "subnet_id": "subnet-04c5e9bae70909d71"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00601559501be93a3",
            "region": "us-east-1",
            "route_table_id": "rtb-0e61d2a632639b3e0",
            "subnet_id": "subnet-0e1ac2ad8e141220e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736165:subnet/subnet-0d90754905abbc5ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d90754905abbc5ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "651706736165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "project-bedrock-vpc-private-us-east-1a",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "project-bedrock-vpc-private-us-east-1a",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06de14ded8d463299"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706736165",
            "id": "subnet-0d90754905abbc5ce",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736165:subnet/subnet-04ba028d5dfebadd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ba028d5dfebadd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "651706736165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "project-bedrock-vpc-private-us-east-1b",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "project-bedrock-vpc-private-us-east-1b",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06de14ded8d463299"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706736165",
            "id": "subnet-04ba028d5dfebadd6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736165:subnet/subnet-04c5e9bae70909d71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c5e9bae70909d71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "651706736165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "project-bedrock-vpc-public-us-east-1a",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "project-bedrock-vpc-public-us-east-1a",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06de14ded8d463299"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706736165",
            "id": "subnet-04c5e9bae70909d71",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736165:subnet/subnet-0e1ac2ad8e141220e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1ac2ad8e141220e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "651706736165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "project-bedrock-vpc-public-us-east-1b",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "project-bedrock-vpc-public-us-east-1b",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06de14ded8d463299"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706736165",
            "id": "subnet-0e1ac2ad8e141220e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736165:vpc/vpc-06de14ded8d463299",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0731f19b8607cec3a",
            "default_route_table_id": "rtb-04135ce5434541eb9",
            "default_security_group_id": "sg-011e7c91a1dca3c73",
            "dhcp_options_id": "dopt-010361ced17846985",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06de14ded8d463299",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04135ce5434541eb9",
            "owner_id": "651706736165",
            "region": "us-east-1",
            "tags": {
              "Name": "project-bedrock-vpc",
              "Project": "Bedrock",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "project-bedrock-vpc",
              "Project": "Bedrock",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706736165",
            "id": "vpc-06de14ded8d463299",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}